Add: Kata 07; kata 08; kata 09; kata 10

--- a/kata 03.ipynb
+++ b/kata 03.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<H1>Kata 03 </h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Un asteroide se acerca"
    ]
   },
