--- a/kata 01.ipynb
+++ b/kata 01.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "Mi primer programa\n",
-    "Noé Gustavo Calalpa Rivas"
+    "Gustavo Calalpa"
    ]
   },
   {
